# meilisearch-cli

./: Cargo.toml  README.md  initialize.sh  little-fluffy.initialize.sh
.github/workflows/: latest.yml  release.yml
src/: api.rs  date.rs  document.rs  filter.pest  interactive.rs  lib.rs  main.rs  query.rs
