[package]
name = "meilisearch-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
color-eyre = "0.5.11"
glob = "0.3.0"
markdown-fm-doc = { git = "https://github.com/ssosik/markdown-fm-doc" }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
shellexpand = "1.0.0"
structopt = "0.3"
termion = "1.5.6"
tui = "0.16.0"
unicode-width = "0.1.9"
url = "2.2"
uuid = { version = "0.8", features = ["v4", "serde"] }

