[package]
name = "meilisearch-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "0.4.1"
chrono = "0.4"
clap = "2.33.3"
color-eyre = "0.5.11"
eyre = "0.6.5"
frontmatter = "0.4.0"
glob = "0.3.0"
markdown-fm-doc = { git = "https://github.com/ssosik/markdown-fm-doc" }
pest = "2.1.3"
pest_derive = "2.1.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.21"
shellexpand = "1.0.0"
structopt = "0.3"
syntect = "4.6.0"
tempfile = "3.2.0"
termion = "1.5.6"
tui = "0.16.0"
unicode-width = "0.1.9"
url = "2.2"
uuid = { version = "0.8", features = ["v4", "serde"] }
uuid-b64 = "0.1.1"
yaml-rust = "0.4.5"

